fixed issue where last project was not showing up on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -474,7 +474,6 @@ html,body{
     }
     /*Projects page*/
     .project-highlight-wrapper{
-        height: 460vmin;
     }
     .project-highlight{margin-top: 20vmin;margin-bottom: 45vmin;}
     .highlight-img{
